test_outputs/connlist/virtual_machines_example_explain_output.txt

#########################################################
# Specific connections and their reasons in pod-network #
#########################################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => default/cirrus-vm-1[VirtualMachine]:

Allowed connections:
	Allowed TCP:[9001-9090] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'default/domain-ingress-egress' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9091-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/domain-ingress-egress' selects default/cirrus-vm-1[VirtualMachine], and Ingress rule #1 selects 0.0.0.0-255.255.255.255[External], but the protocols and ports do not match
				- NetworkPolicy 'default/ingress-by-labels' selects default/cirrus-vm-1[VirtualMachine], but 0.0.0.0-255.255.255.255[External] is not allowed by any Ingress rule


----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between 0.0.0.0-255.255.255.255[External] => default/fedora-vm-1[VirtualMachine]:

Allowed connections:
	Allowed TCP:[9001-9090] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			NetworkPolicy 'default/domain-ingress-egress' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-9000,9091-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			NetworkPolicy 'default/domain-ingress-egress' selects default/fedora-vm-1[VirtualMachine], and Ingress rule #1 selects 0.0.0.0-255.255.255.255[External], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/cirrus-vm-1[VirtualMachine] => 0.0.0.0-255.255.255.255[External]:

Allowed connections:
	Allowed TCP:[8080-9090] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'default/domain-ingress-egress' allows connections by Egress rule #1
		Ingress (Allowed) due to the system default (Allow all)

Denied connections:
	Denied TCP:[1-8079,9091-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'default/domain-ingress-egress' selects default/cirrus-vm-1[VirtualMachine], and Egress rule #1 selects 0.0.0.0-255.255.255.255[External], but the protocols and ports do not match
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/cirrus-vm-1[VirtualMachine] => default/fedora-vm-1[VirtualMachine]:

Allowed connections:
	Allowed TCP:[9001-9090] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'default/domain-ingress-egress' allows connections by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy 'default/domain-ingress-egress' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-8079,9091-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'default/domain-ingress-egress' selects default/cirrus-vm-1[VirtualMachine], and Egress rule #1 selects default/fedora-vm-1[VirtualMachine], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy 'default/domain-ingress-egress' selects default/fedora-vm-1[VirtualMachine], and Ingress rule #1 selects default/cirrus-vm-1[VirtualMachine], but the protocols and ports do not match

	Denied TCP:[8080-9000] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'default/domain-ingress-egress' allows connections by Egress rule #1
		Ingress (Denied)
			NetworkPolicy 'default/domain-ingress-egress' selects default/fedora-vm-1[VirtualMachine], and Ingress rule #1 selects default/cirrus-vm-1[VirtualMachine], but the protocols and ports do not match

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/fedora-vm-1[VirtualMachine] => 0.0.0.0-255.255.255.255[External]:

Allowed connections:
	Allowed TCP:[8080-9090] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'default/domain-ingress-egress' allows connections by Egress rule #1
		Ingress (Allowed) due to the system default (Allow all)

Denied connections:
	Denied TCP:[1-8079,9091-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'default/domain-ingress-egress' selects default/fedora-vm-1[VirtualMachine], and Egress rule #1 selects 0.0.0.0-255.255.255.255[External], but the protocols and ports do not match
		Ingress (Allowed) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between default/fedora-vm-1[VirtualMachine] => default/cirrus-vm-1[VirtualMachine]:

Allowed connections:
	Allowed TCP:[8099] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'default/domain-ingress-egress' allows connections by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy 'default/ingress-by-labels' allows connections by Ingress rule #1

	Allowed TCP:[9001-9090] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'default/domain-ingress-egress' allows connections by Egress rule #1
		Ingress (Allowed)
			NetworkPolicy 'default/domain-ingress-egress' allows connections by Ingress rule #1

Denied connections:
	Denied TCP:[1-8079,9091-65535], UDP, SCTP due to the following policies and rules:
		Egress (Denied)
			NetworkPolicy 'default/domain-ingress-egress' selects default/fedora-vm-1[VirtualMachine], and Egress rule #1 selects default/cirrus-vm-1[VirtualMachine], but the protocols and ports do not match
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/domain-ingress-egress' selects default/cirrus-vm-1[VirtualMachine], and Ingress rule #1 selects default/fedora-vm-1[VirtualMachine], but the protocols and ports do not match
				- NetworkPolicy 'default/ingress-by-labels' selects default/cirrus-vm-1[VirtualMachine], and Ingress rule #1 selects default/fedora-vm-1[VirtualMachine], but the protocols and ports do not match


	Denied TCP:[8080-8098,8100-9000] due to the following policies and rules:
		Egress (Allowed)
			NetworkPolicy 'default/domain-ingress-egress' allows connections by Egress rule #1
		Ingress (Denied)
			NetworkPolicy list:
				- NetworkPolicy 'default/domain-ingress-egress' selects default/cirrus-vm-1[VirtualMachine], and Ingress rule #1 selects default/fedora-vm-1[VirtualMachine], but the protocols and ports do not match
				- NetworkPolicy 'default/ingress-by-labels' selects default/cirrus-vm-1[VirtualMachine], and Ingress rule #1 selects default/fedora-vm-1[VirtualMachine], but the protocols and ports do not match
